Fix a crash when Animation Cache Size limit is too low

We don't need to generate a separate weights array anymore,
since we have a proper method for uniform mixing these days.

BUG:459135